welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "R") {droite();avance()};
                            ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "L") {gauche();avance()};
                            ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "I") {gauche();gauche();avance()};
                            ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "A") {avance()};
                            ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "B") {avance();avance()};
                            ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "C") {avance();avance();avance()};
                            ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "Z") {recule()};
                            ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "Y") {recule();recule()};
                            ^BDRBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
		if (message = "X") {recule();recule();recule()};
                            ^